--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
-language: node_js
+sudo: required
+
+services: 
+  - docker
+
+before_install: 
+  - docker build -t guygaver/docker-react -f Dockerfile.dev .
+    
+script: 
+  - docker run guygaver/docker-react npm run test -- --coverage
