--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,17 @@ before_install:
     
 script: 
   - docker run guygaver/docker-react npm run test -- --coverage
+
+# deploy instructions for elasticbeanstalk
+deploy: 
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react-udemy"
+  env: "DockerReactUdemy-env"
+  bucket_name: "elasticbeanstalk-us-east-1-903881244030"
+  bucket_path: "docker-react-udemy" # should be same as app name
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
